Fixed tooltips, preserved new-line white spaces in html elements, condensed expanse div for non-recurring objects, etc.

--- a/static/css/budget/budget.css
+++ b/static/css/budget/budget.css
@@ -62,6 +62,7 @@
 
 #budget-basic p {
     margin: 0px;
+    white-space: pre-wrap;
 }
 
 #details-head {
